test/Fail/Issue4775.err
Issue4775.agda:16.11-24: error: [ShouldBeRecordPattern]
Expected record pattern
when checking the let binding y1 , isSuc y2 = .patternInTele0
